--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="nav">
             <div class="logo">
                 <a href="">
-                    <img src="image/logo.png" alt="">
+                    <img src="image/logo-1.png" alt="">
                 </a>
             </div>
             <div class="nav-link">
@@ -26,7 +26,7 @@
         </nav>
 
         <div class="nav-text">
-            <h1>World's Biggest University</h1>
+            <h1>Northern University Of Bangladesh</h1>
             <p>
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Sint, debitis dolores a ipsum dolorem molestias
                 <br>
@@ -42,6 +42,67 @@
     </header>
 
     <main>
+
+        <!-- course we offer -->
+
+        <div class="course">
+            <h1> courses We Offer</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+
+        <div class="courses-name">
+
+            <div class="courses-name-1">
+
+                <h2>CSE</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error unde eius inventore impedit quae
+                    numquam
+                    eveniet obcaecati vitae blanditiis voluptatum. Tempora quibusdam nemo nisi cum.
+                </p>
+            </div>
+            <div class="courses-name-2">
+
+                <h2>Law</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error unde eius inventore impedit quae
+                    numquam
+                    eveniet obcaecati vitae blanditiis voluptatum. Tempora quibusdam nemo nisi cum.
+                </p>
+            </div>
+            <div class="courses-name-3">
+
+                <h2>Business</h2>
+                <p>
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Error unde eius inventore impedit quae
+                    numquam
+                    eveniet obcaecati vitae blanditiis voluptatum. Tempora quibusdam nemo nisi cum.
+                </p>
+            </div>
+        </div>
+
+        <!-- campus -->
+
+        <div class="campus">
+            <div class="campus-hader">
+                <h2>Our Global Campus</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="campus-img">
+
+                <div>
+                    <img src="image/london.png" alt="">
+                </div>
+                <div>
+                    <img src="image/newyork.png" alt="">
+                </div>
+                <div>
+                    <img src="image/washington.png" alt="">
+                </div>
+            </div>
+
+
+        </div>
 
 
     </main>
