--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
             <div class="campus-img">
 
                 <div>
+
                     <img src="image/london.png" alt="">
+
                 </div>
                 <div>
                     <img src="image/newyork.png" alt="">
@@ -100,9 +102,16 @@
                     <img src="image/washington.png" alt="">
                 </div>
             </div>
-
-
         </div>
+
+        <!-- Facilitics -->
+
+        
+        <section class="Facilitics">
+            <h2>Our Facilitics</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+
+        </section>
 
 
     </main>
